--- a/index.html
+++ b/index.html
@@ -1,52 +1,70 @@
 <!doctype html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>Index</title>
-        <link rel="stylesheet" href="assets/css/td2/main.css">
-    </head>
-    <body>
-        <h1>
-            Travaux dirigés Bloc 1 SLAM
-        </h1>
-            <h2>
-                Documents
-            </h2>
-                <h3>
-                    TD1
-                    <ul>
-                        <li>
-                            <a href="Documents/TD1" target="_blank">Architecture Web</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travaux Dirigés Bloc 1 SLAM</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+<body>
 
-                        </li>
-                    </ul>
-                        
-                
-                </h3>
-                <h3>
-                    TD2
-                </h3>
-                    <ul>
-						<li>
-							Mentions légales
-							<ul>
-								<li>
-									<a href="pages/td2/mentionlegales-1.html" target="_blank">Mentions légales 1</a>
-								</li>
-								<li>
-									<a href="pages/td2/mentionlegales-2.html" target="_blank">Mentions légales 2</a>
-								</li>
-								<li>
-									<a href="pages/td2/mentionlegales-3 -.html" target="_blank">Mentions légales 3</a>
-								</li>
-							</ul>
-						</li>
-                        <li>
-                            <a href="pages/td2/pate-a-crepes.html" target="_blank">Pâte à crêpe</a>
-                        </li>
-                        <li>
-                            <a href="pages/td2/statuts-juridiques.html" target="_blank">Statuts juridiques</a>
-                        </li>
-                    </ul>
-    </body>
+    <h1>Travaux dirigés Bloc 1 SLAM</h1>
+    <h2>Documents</h2>
+
+    <nav>
+        <ul class="nav-menu">
+            <!-- TD1 -->
+            <li class="nav-item">
+                <a href="#">TD1</a>
+                <ul class="dropdown">
+                    <li><a href="Documents/TD1.md" target="_blank">Architecture Web</a></li>
+                </ul>
+            </li>
+
+            <!-- TD2 -->
+            <li class="nav-item">
+                <a href="#">TD2</a>
+                <ul class="dropdown">
+                    <li>
+                        Mentions légales
+                        <ul>
+                            <li><a href="docs/pages/td2/mentionlegales-1.html" target="_blank">Mentions légales 1</a></li>
+                            <li><a href="docs/pages/td2/mentionlegales-2.html" target="_blank">Mentions légales 2</a></li>
+                            <li><a href="docs/pages/td2/mentionlegales-3-.html" target="_blank">Mentions légales 3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="docs/pages/td2/pate-a-crepes.html" target="_blank">Pâte à crêpe</a></li>
+                    <li><a href="docs/pages/td2/statuts-juridiques.html" target="_blank">Statuts juridiques</a></li>
+                </ul>
+            </li>
+
+            <!-- TD3 -->
+            <li class="nav-item">
+                <a href="#">TD3</a>
+                <ul class="dropdown">
+                    <li><a href="docs/pages/td3/about-us.html" target="_blank">Web Arena</a></li>
+                    <li><a href="docs/pages/td3/blog.html" target="_blank">Web Arena blog</a></li>
+                    <li><a href="docs/pages/td3/conseil-gestion.html" target="_blank">Conseil Gestion</a></li>
+                </ul>
+            </li>
+
+            <!-- TD4 -->
+            <li class="nav-item">
+                <a href="#">TD4</a>
+                <ul class="dropdown">
+                    <li><a href="docs/pages/td4/ex-js//Addition.html" target="_blank">Addition</a></li>
+                    <li><a href="docs/pages/td4/ex-js/Add-select.html" target="_blank">Add-select</a></li>
+                    <li><a href="docs/pages/td4/ex-js/Alert-mouse-over.html" target="_blank">Alert-mouse-over</a></li>
+                    <li><a href="docs/pages/td4/ex-js/Background-color.html" target="_blank">Background-color</a></li>
+                    <li><a href="docs/pages/td4/ex-js/Delete-conf.html" target="_blank">Delete-conf</a></li>
+                    <li><a href="docs/pages/td4/ex-js/Form-contact.html" target="_blank">Form-contact</a></li>
+                    <li><a href="docs/pages/td4/ex-js/Horloge.html" target="_blank">Horloge</a></li>
+                    <li><a href="docs/pages/td4/ex-js/Images.html" target="_blank">Images</a></li>
+                    <li><a href="docs/pages/td4/ex-js/Toggle-check.html" target="_blank">Toggle-check</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+
+</body>
 </html>
